# dev-manager-desktop

./: .editorconfig  .eslintrc.json  .gitignore  CHANGELOG.md  Cargo.toml  README.md  angular.json  angular.webpack.js  electron-builder.json  index.ts  karma.conf.js  main.ts  package-lock.json  package.json  package.json.backup  preload.ts  tsconfig.app.json  tsconfig.json  tsconfig.serve.json  tsconfig.spec.json  webpack.config.js  webpack.config.ts
.cargo/: config.toml
.github/: FUNDING.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: build-verify.yml  release-apk.yml  release.yml  ubuntu.yml
backend/: ares-pull-proto.js  ares-pull-proto.ts  ssh-session.js
common/types/: device-manager.js  device-manager.ts  file-session.js  file-session.ts  index.ts  novacom-data.js
e2e/: main.e2e.ts
fastlane/: .gitignore  Appfile  Fastfile  Pluginfile  README.md
fastlane/studio/: .gitignore  open  studio.cmd
fastlane/studio/applications/: studio.desktop
fastlane/util/: npm.rb  tauri.rb
main/: .gitignore  app-manager.backend.ts  ares-pull-proto.ts  cors-skip.ts  index.ts  ipc-backend.ts  package-lock.json  package.json  tsconfig.json
main/device-manager/: device-manager.backend.ts
main/file-session/: file-session.backend.ts  file-session.impl.ts
main/shell-session/: shell-session.backend.ts  shell-session.impl.ts
main/types/: device-manager.ts  file-session.ts  novacom-data.ts
main/util/: ares-utils.ts
resources/: icon_desktop.md
scripts/: icon-generator.js  karma-tauri-launcher.js  ng-wrapper.js  tauri-wrapper.js
src/: index.html  main.ts  polyfills.ts  proxy.conf.json  styles.scss  tsconfig.app.json  tsconfig.spec.json  typings.d.ts
src-tauri/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json  tauri.linux.conf.json
src-tauri/assets/: app.desktop
src-tauri/capabilities/: app.json
src-tauri/icons/: icon.icns
src-tauri/permissions/dev-mode/: default.toml
src-tauri/permissions/device-manager/: default.toml
src-tauri/permissions/local-file/: default.toml
src-tauri/permissions/remote-command/: default.toml
src-tauri/permissions/remote-file/: default.toml
src-tauri/permissions/remote-shell/: default.toml
src-tauri/res/scripts/: files_ls.py
src-tauri/src/: byte_string.rs  device_manager.rs  error.rs  lib.rs  main.rs  session_manager.rs  shell_events.rs  shell_manager.rs
src-tauri/src/app_dirs/: mod.rs
src-tauri/src/conn_pool/: cmd.rs  connection.rs  mod.rs  pool.rs
src-tauri/src/device_manager/: device.rs  error.rs  io.rs  manager.rs  mod.rs  novacom.rs  privkey.rs
src-tauri/src/event_channel/: channel.rs  mod.rs
src-tauri/src/plugins/: cmd.rs  device.rs  devices.rs  devmode.rs  file.rs  local_file.rs  mod.rs  shell.rs
src-tauri/src/remote_command/: mod.rs
src-tauri/src/remote_files/: ls.rs  mod.rs  path.rs  serve.rs  sftp.rs
src-tauri/src/remote_files/helpers/: ls.py  serve.js
src-tauri/src/session_manager/: connection.rs  device.rs  error.rs  handler.rs  manager.rs  mod.rs  proc.rs  shell.rs  spawned.rs
src-tauri/src/shell_manager/: manager.rs  mod.rs  shell.rs  token.rs
src-tauri/src/spawn_manager/: manager.rs  mod.rs
src-tauri/src/ssh_dir/: mod.rs
src-tauri/src/ssh_files/: ls.rs  mod.rs
src-tauri/src/tests/common/: mod.rs
src-tauri/src/tests/common/test_server/: mod.rs
src-tauri/src/tests/common/test_server/entrypoint.d/: setpasswd.sh
src-tauri/src/tests/common/test_server/keys/: id_root  id_root.pub
src/app/: app-routing.module.ts  app.component.scss  app.component.ts  app.module.ts
src/app/add-device/: add-device.component.html  add-device.component.spec.ts  add-device.component.ts  add-device.module.ts
src/app/apps/: apps.component.html  apps.component.ts  apps.module.ts  index.ts
src/app/core/: core.module.ts  event-channel.ts
src/app/debug/: debug.component.html  debug.component.ts  debug.module.ts  index.ts
src/app/device-list/: device-list.component.html  device-list.component.spec.ts  device-list.component.ts
src/app/device-setup/: device-setup.component.html  device-setup.component.scss  device-setup.component.spec.ts  device-setup.component.ts
src/app/devices/: devices.component.html  devices.component.spec.ts  devices.component.ts
src/app/files/: files.component.html  files.component.scss  files.component.ts  files.module.ts  index.ts
src/app/home/: home.component.html  home.component.scss  home.component.spec.ts  home.component.ts
src/app/info/: devmode-countdown.pipe.spec.ts  devmode-countdown.pipe.ts  index.ts  info-routing.module.ts  info.component.html  info.component.ts  info.module.ts
src/app/remove-device/: remove-device.component.html  remove-device.component.spec.ts  remove-device.component.ts
src/app/shared/: constants.ts  shared.module.ts
src/app/terminal/: index.ts  terminal-routing.module.ts  terminal.component.html  terminal.component.scss  terminal.component.ts  terminal.module.ts
src/app/types/: device-manager.ts  device.ts  file-session.ts  index.ts  luna-apis.ts
src/app/update-details/: update-details.component.html  update-details.component.spec.ts  update-details.component.ts
src/assets/i18n/: en.json
src/assets/icons/: favicon.icns
src/backend/: app-manager.backend.ts  ares-pull-proto.ts  cors-skip.ts  ipc-backend.ts  ipc-handlers.ts  ssh-session.ts
src/backend/device-manager/: device-manager.backend.ts  file-session.ts  shell-session.ts
src/backend/file-session/: file-session.backend.ts  file-session.impl.ts
src/backend/shell-session/: shell-session.backend.ts  shell-session.impl.ts
src/environments/: environment.dev.ts  environment.prod.ts  environment.ts
src/styles/: app-item.scss  no-select.scss  shared.scss  terminal.scss
src/types/: device-manager.ts  file-session.ts  index.ts  novacom-data.ts  novacom.ts
ui/: README.md  angular.json  package-lock.json  package.json  webpack.config.js
ui/src/: index.html  main.ts  polyfills.ts  styles.scss
ui/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
ui/src/styles/: app-item.scss
(+318 files in other folders)
