[workspace]
resolver = "2"
members = [
  "src-tauri"
]

[patch.crates-io]
cc = { git = "https://github.com/mariotaku/cc-rs.git", rev = "01a3414" }
r2d2 = { git = "https://github.com/mariotaku/r2d2.git", rev = "aaa2a2b" }
# TODO: remove this patch when this branch is merged
tauri-build = { git = "https://github.com/mariotaku/tauri.git", branch = "feature/android-version-info" }
# TODO: remove when a new version is released
wry = { git = "https://github.com/tauri-apps/wry.git", rev = "50ec050" }
