[package]
name = "devman"
version = "0.2.0"
description = "Device Manager for LG webOS"
authors = ["Ningyuan Li"]
license = "Apache-2.0"
repository = "https://github.com/webosbrew/dev-manager-desktop"
edition = "2021"
rust-version = "1.76.0"
links = "devman"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "devman"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = ["codegen"] }
tauri-plugin = { version = "2.0.0-beta", features = ["build"] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.18"
log = "0.4.21"
env_logger = "0.11.3"
rand = "0.8.5"
vt100 = "0.15.2"
tokio = "1.37.0"
uuid = { version = "1.8.0", features = ["v1"] }
hex = "0.4.3"
file-mode = "0.1.2"
posix-errors = "1.2.1"
path-slash = "0.2.1"
httparse = "1.8.0"
r2d2 = "0.8.10"
unix_mode = "0.1.4"
sha256 = "1.5.0"
pathdiff = "0.2.1"
libssh-rs = { version = "0.3.2", features = ["vendored"] }
libssh-rs-sys = "0.2.2"
flate2 = "1.0"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
regex = "1.10.4"
libc = "0.2.153"

[dependencies.tauri]
version = "2.0.0-beta"
default-features = false
features = ["wry"]

[dependencies.reqwest]
version = "0.12.4"
features = ["json"]

[dependencies.native-dialog]
version = "0.7.0"
features = ["windows_dpi_awareness", "windows_visual_styles"]
optional = true

[dependencies.tauri-plugin-upload]
version = "2.0.0-beta"

[dependencies.tauri-plugin-single-instance]
version = "2.0.0-beta"
optional = true

[dependencies.ssh-key]
version = "0.6.6"
features = ["ed25519"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol", "vendored-openssl"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
vendored-openssl = ["libssh-rs-sys/vendored-openssl", "reqwest/native-tls-vendored"]
desktop = ["tauri-plugin-single-instance", "native-dialog"]
