[package]
name = "devman"
version = "0.2.0"
description = "Device Manager for LG webOS"
authors = ["Ningyuan Li"]
license = "Apache-2.0"
repository = "https://github.com/webosbrew/dev-manager-desktop"
edition = "2021"
rust-version = "1.92.0"
links = "devman"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "webos-dev-manager"
path = "src/main.rs"

[lib]
name = "devman"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = ["codegen"] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.29"
vt100 = "0.15.2"
tokio = { version = "1.18.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.19.0", features = ["v1", "v4"] }
hex = "0.4.3"
path-slash = "0.2.1"
httparse = "1.10.1"
r2d2 = "0.8.10"
unix_mode = "0.1.4"
sha2 = "0.10.9"
pathdiff = "0.2.3"
libssh-rs = { version = "0.3.6", features = ["vendored"] }
libssh-rs-sys = "0.2.6"
flate2 = "1.1.2"
regex = "1.12.2"
port_check = "0.3.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-log = "2.8.0"
tauri-plugin-os = "2.3.2"
tauri-plugin-http = { version = "2.5.7", default-features = false, features = ["json", "native-tls"] }

[dependencies.tauri]
version = "2.10.2"
default-features = false
features = ["wry"]

[dependencies.native-dialog]
version = "0.9.4"
features = ["windows_dpi_awareness", "windows_visual_styles"]
optional = true

[dependencies.tauri-plugin-upload]
version = "2.4.0"

[dependencies.tauri-plugin-single-instance]
version = "2.4.0"
optional = true

[dependencies.ssh-key]
version = "0.6.7"
features = ["ed25519", "getrandom"]

[dev-dependencies]
httptest = "0.16.3"
abs-file-macro = "0.1.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
vendored-openssl = ["libssh-rs-sys/vendored-openssl", "tauri-plugin-http/native-tls-vendored"]
desktop = ["tauri-plugin-single-instance", "native-dialog"]
karma = []
